cot-macros/tests/ui/derive_select_choice_enum_with_data.rs
use cot_macros::SelectChoice;

#[derive(SelectChoice)]
enum EnumWithData {
    Foo(u32),
    Bar { x: String },
    Unit,
}

fn main() {}
